--- a/index.html
+++ b/index.html
@@ -6,26 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    <!-- <div class="grid-container">
-        <div class="grid-item" id="item1">1</div>
-        <div class="grid-item" id="item2">2</div>
-        <div class="grid-item" id="item3">3</div>
-        <div class="grid-item" id="item4">4</div>
-        <div class="grid-item" id="item5">5</div>
-        <div class="grid-item" id="item6">6</div>
-        <div class="grid-item" id="item7">7</div>
-        <div class="grid-item" id="item8">8</div>
-        <div class="grid-item">9</div>
-    </div> -->
-
-    <section id="page">
-        <header>Header</header>
-        <nav>Navigation</nav>
-        <main>Main area</main>
-        <footer>Footer</footer>
-    </section>
+    <button id="restart">Restart</button>
 </body>
 </html>
